@@ -1,4 +1,4 @@
-$NetBSD: distinfo,v 1.3 2002/09/30 04:07:19 jschauma Exp $
+$NetBSD: distinfo,v 1.4 2003/01/28 20:05:39 abs Exp $
 
-SHA1 (netscape7/english/netscape-i686-pc-linux-gnu-sea.tar.gz) = 5f0a878167846faa28fc855d27068961c9b99221
-Size (netscape7/english/netscape-i686-pc-linux-gnu-sea.tar.gz) = 45306637 bytes
+SHA1 (netscape/7.01/english/netscape-i686-pc-linux-gnu-sea.tar.gz) = 92ac955a3e1dfc2df481df167bba1028587b395e
+Size (netscape/7.01/english/netscape-i686-pc-linux-gnu-sea.tar.gz) = 16565613 bytes
