@@ -1,4 +1,4 @@
-$NetBSD: distinfo.french,v 1.1 2002/09/30 13:45:47 jschauma Exp $
+$NetBSD: distinfo.french,v 1.2 2003/01/28 20:05:40 abs Exp $
 
-SHA1 (netscape7/french/netscape-i686-pc-linux-gnu-sea.tar.gz) = fc775ab077e771c02a5344334d8e230cf3dc2f0d
-Size (netscape7/french/netscape-i686-pc-linux-gnu-sea.tar.gz) = 45655983 bytes
+SHA1 (netscape/7.01/french/netscape-i686-pc-linux-gnu-sea.tar.gz) = 12885872d7adff8ee32fb84d1da303d6a85bc23a
+Size (netscape/7.01/french/netscape-i686-pc-linux-gnu-sea.tar.gz) = 16913743 bytes
