@@ -1,4 +1,4 @@
-$NetBSD: distinfo.german,v 1.1 2002/09/30 13:45:48 jschauma Exp $
+$NetBSD: distinfo.german,v 1.2 2003/01/28 20:05:40 abs Exp $
 
-SHA1 (netscape7/german/netscape-i686-pc-linux-gnu-sea.tar.gz) = 020b85ec080e7dded00e200187682d97cd7c6ee3
-Size (netscape7/german/netscape-i686-pc-linux-gnu-sea.tar.gz) = 45909052 bytes
+SHA1 (netscape/7.01/german/netscape-i686-pc-linux-gnu-sea.tar.gz) = cc17e5a27a1901ff799e6563f94fcb16ab20f5cd
+Size (netscape/7.01/german/netscape-i686-pc-linux-gnu-sea.tar.gz) = 17161111 bytes
