@@ -1,4 +1,4 @@
-$NetBSD: distinfo.japanese,v 1.1 2002/09/30 13:45:49 jschauma Exp $
+$NetBSD: distinfo.japanese,v 1.2 2003/01/28 20:05:40 abs Exp $
 
-SHA1 (netscape7/japanese/netscape-i686-pc-linux-gnu-sea.tar.gz) = c2ec91fe3ce11d28df87daaa794659ee49374a9b
-Size (netscape7/japanese/netscape-i686-pc-linux-gnu-sea.tar.gz) = 45354901 bytes
+SHA1 (netscape/7.01/japanese/netscape-i686-pc-linux-gnu-sea.tar.gz) = 07802dcc4a8484fefee348ea602004ff748fe6ed
+Size (netscape/7.01/japanese/netscape-i686-pc-linux-gnu-sea.tar.gz) = 16623434 bytes
